# YTVeille

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/api/: Dockerfile  __init__.py  main.py  models.py  storage.py  youtube_client.py
backend/scoring/: keywords.py  scorer.py
backend/scoring/tests/: __init__.py  test_scorer.py
backend/worker/: Dockerfile  scheduler.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FilterPanel.tsx  Sidebar.tsx  TopBar.tsx  VideoCard.tsx
frontend/lib/: api.ts
